Added first page for web app, added some basic js and css

--- a/views/isbn_number_main_page.erb
+++ b/views/isbn_number_main_page.erb
@@ -6,7 +6,7 @@
 </head>
 <body>
 <body onload = "checkCookies()">
-<p id="demo"></p>
+<p id="cookies"></p>
 <h1> Mike's ISBN Number Checking App </h1>
 <form method = "post" action = "isbn_number_main_page">
 <hr>
