--- a/views/isbn_number_main_page.erb
+++ b/views/isbn_number_main_page.erb
@@ -13,8 +13,16 @@
 <h3> Please enter the ISBN number that you want to check in the box below. </h3>
 <br><br>
 <center>
-<input type="text" id="isbn" name = "verify_isbn" placeholder="Insert ISBN" required>
+<input type="text" id="isbn" name = "isbn" placeholder="Insert ISBN" required>
 </center>
+<br>
+<h3> The validity of the ISBN number is posted below. </h3>
+<br><br>
+<div class="verify">
+	<%= isbn_output %><hr>
+    <%= validity_final %><hr>
+    <%= isbn_orig %><hr>
+</div>
 <br><br>
 <input class = "button" type = "submit" value = "Verify ISBN" onclick>
 </form>
