Added more tests, revised existing functions, added 1 new function

--- a/views/isbn_number_main_page.erb
+++ b/views/isbn_number_main_page.erb
@@ -19,9 +19,7 @@
 <h3> The validity of the ISBN number is posted below. </h3>
 <br><br>
 <div class="verify">
-	<%= isbn_output %><hr>
-    <%= validity_final %><hr>
-    <%= isbn_orig %><hr>
+    <%= isbn2 %><hr>
 </div>
 <br><br>
 <input class = "button" type = "submit" value = "Verify ISBN" onclick>
