Added more tests, trying to fix bugs

--- a/views/isbn_number_main_page.erb
+++ b/views/isbn_number_main_page.erb
@@ -20,6 +20,8 @@
 <br><br>
 <div class="verify">
     <%= isbn2 %><hr>
+    <%=validity_final%><hr>
+    
 </div>
 <br><br>
 <input class = "button" type = "submit" value = "Verify ISBN" onclick>
